crates/cpg-schema/tests/snapshots/contracts__catalog_artifacts.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table catalog_artifacts
family findings
key snapshot_id, artifact_id
check bytes: byte_len >= 0
@lctx.family=findings
@lctx.table=catalog_artifacts
snapshot_id: FixedSizeBinary(16) NOT NULL
artifact_id: FixedSizeBinary(16) NOT NULL
release_id: FixedSizeBinary(16) NOT NULL
path: Utf8 NOT NULL
source_kind: Utf8 NOT NULL
source_digest: FixedSizeBinary(32) NOT NULL
byte_len: Int64 NOT NULL
body: Binary NOT NULL
alignment: Utf8 NOT NULL
provenance: Utf8 NOT NULL
