crates/cpg-schema/tests/snapshots/contracts__catalog_bindings.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table catalog_bindings
family findings
key snapshot_id, member_id, binding_id
@lctx.family=findings
@lctx.table=catalog_bindings
snapshot_id: FixedSizeBinary(16) NOT NULL
member_id: FixedSizeBinary(16) NOT NULL
binding_id: FixedSizeBinary(16) NOT NULL
declaration_node_id: FixedSizeBinary(16) NULL
source_fact_id: FixedSizeBinary(16) NOT NULL
role: Utf8 NOT NULL
own: Boolean NOT NULL
defining_path: Utf8 NULL
