crates/cpg-schema/tests/snapshots/contracts__catalog_compilation.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table catalog_compilation
family findings
key snapshot_id
check profile: profile = 'catalog' OR profile = 'behavioral'
@lctx.family=findings
@lctx.table=catalog_compilation
snapshot_id: FixedSizeBinary(16) NOT NULL
profile: Utf8 NOT NULL
public_roots: List(non-null Utf8) NOT NULL
input_digest: FixedSizeBinary(32) NOT NULL
