crates/cpg-schema/tests/snapshots/contracts__catalog_configurations.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table catalog_configurations
family findings
key snapshot_id, field_id, source_fact_id
check ordinal: ordinal >= 0
@lctx.family=findings
@lctx.table=catalog_configurations
snapshot_id: FixedSizeBinary(16) NOT NULL
field_id: FixedSizeBinary(16) NOT NULL
class_node_id: FixedSizeBinary(16) NOT NULL
source_fact_id: FixedSizeBinary(16) NOT NULL
syntax_fact_id: FixedSizeBinary(16) NULL
record_kind: Utf8 NOT NULL
name: Utf8 NOT NULL
ordinal: Int64 NOT NULL
term_id: FixedSizeBinary(16) NOT NULL
alias: Utf8 NULL
init: Boolean NULL
kw_only: Boolean NULL
required: Boolean NULL
read_only: Boolean NULL
annotation_text: Utf8 NULL
default_state: Utf8 NOT NULL
default_text: Utf8 NULL
literal_json: Utf8 NULL
factory_text: Utf8 NULL
reason: Utf8 NULL
