crates/cpg-schema/tests/snapshots/contracts__catalog_constructors.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table catalog_constructors
family findings
key snapshot_id, class_node_id, signature_id
@lctx.family=findings
@lctx.table=catalog_constructors
snapshot_id: FixedSizeBinary(16) NOT NULL
class_node_id: FixedSizeBinary(16) NOT NULL
signature_id: FixedSizeBinary(16) NOT NULL
own: Boolean NOT NULL
ancestry_fact_id: FixedSizeBinary(16) NULL
