crates/cpg-schema/tests/snapshots/contracts__catalog_evidence.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table catalog_evidence
family findings
key snapshot_id, evidence_id
check span: start_byte >= 0 AND end_byte >= start_byte
@lctx.family=findings
@lctx.table=catalog_evidence
snapshot_id: FixedSizeBinary(16) NOT NULL
evidence_id: FixedSizeBinary(16) NOT NULL
subject_node_id: FixedSizeBinary(16) NOT NULL
source_fact_id: FixedSizeBinary(16) NOT NULL
source_digest: FixedSizeBinary(32) NOT NULL
path: Utf8 NOT NULL
start_byte: Int64 NOT NULL
end_byte: Int64 NOT NULL
role: Utf8 NOT NULL
text: Utf8 NOT NULL
