crates/cpg-schema/tests/snapshots/contracts__catalog_members.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table catalog_members
family findings
key snapshot_id, member_id
check path: access_path <> ''
@lctx.family=findings
@lctx.table=catalog_members
snapshot_id: FixedSizeBinary(16) NOT NULL
member_id: FixedSizeBinary(16) NOT NULL
access_path: Utf8 NOT NULL
owner_path: Utf8 NOT NULL
operation_node_id: FixedSizeBinary(16) NULL
kind: Utf8 NOT NULL
resolution: Utf8 NOT NULL
brief_status: Utf8 NOT NULL
brief_reason: Utf8 NULL
